// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationManager.vue renders all meshes notification modal 1`] = `
<div
  aria-label="Notifications"
  aria-modal="true"
  class="k-modal modal"
  data-testid="notification-modal"
  data-v-442f114b=""
  role="dialog"
>
  <div
    class="k-modal-backdrop modal-backdrop"
    data-v-442f114b=""
  >
    <div
      class="k-modal-dialog modal-dialog"
      data-v-442f114b=""
    >
      <!---->
      <div
        class="k-modal-content modal-content"
        data-v-442f114b=""
      >
        <!---->
        <div
          aria-level="2"
          class="header-left mb-5 k-modal-header modal-header"
          data-v-442f114b=""
          role="heading"
        >
          
          <div
            class="flex items-center"
          >
            <span
              class="mr-2 kong-icon-notificationBell kong-icon"
              data-v-71cfcfc4=""
            >
              <svg
                fill="var(--yellow-300)"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                
  
                <title>
                  Notifications
                </title>
                
  
                <path
                  d="M8.5 19.5a3.8 3.8 0 0 0 3.5 3c1.32 0 3-.97 3.5-3h-7ZM20.42 14.8a.4.4 0 0 0-.11-.26l-1.98-1.97a.5.5 0 0 1-.17-.4v-3.1a5.95 5.95 0 0 0-3.08-5.36c-.3-.18-.63-.31-.95-.46a7.8 7.8 0 0 0-3.96 0l-.2.1c-.93.36-1.73.92-2.4 1.69a5.74 5.74 0 0 0-1.43 3.62c-.03 1.17-.01 2.35-.01 3.52a.5.5 0 0 1-.17.4L4 14.53a.48.48 0 0 0-.13.3V18H20.4l.01-.17c.02-1.01.02-2.02.01-3.03Z"
                  fill="var(--yellow-300)"
                />
                

              </svg>
              

            </span>
             Notifications 
          </div>
          
        </div>
        <div
          class="content-left k-modal-body modal-body"
          data-v-442f114b=""
        >
          
          <div>
            <div
              class="py-4"
            >
              <h3
                class="font-bold mb-4"
              >
                 Meshes 
              </h3>
              <div>
                <p>
                   Check the following meshes for suggestions to adjust the configuration 
                </p>
                <div
                  class="pt-4 flex space-x-4"
                >
                  
                  <span
                    class="relative d-inline-block"
                  >
                    <div
                      class="k-badge-default k-badge-rounded k-badge truncate cursor-pointer hover:scale-110"
                      data-v-17d30312=""
                    >
                      
                      test-mesh
                      
                    </div>
                    <span
                      class="notification-amount"
                    >
                      4
                    </span>
                  </span>
                  
                </div>
              </div>
            </div>
            <div
              class="py-4"
            >
              <h3
                class="font-bold mb-4"
              >
                 Enterprise 
              </h3>
              <p>
                 Kuma’s ecosystem has created enterprise offerings to do more with the product, including advanced integrations and support. 
              </p>
              <a
                class="medium rounded primary k-button enterprise-button"
                data-v-6bcbf05d=""
                href="https://kuma.io/enterprise/?utm_source=Kuma&utm_medium=Kuma-GUI"
                target="_blank"
                type="button"
              >
                
                <!---->
                
                
                <span
                  class="kong-icon-organizations kong-icon"
                  data-v-71cfcfc4=""
                >
                  <svg
                    fill="white"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
  
                    <title>
                      Organization
                    </title>
                    
  
                    <path
                      d="M16.191 10.947H12.82l2.122 1.977v5.11l4.777.018v-4.019l-3.528-3.086ZM4.11 10.107 0 13.194v4.838h12.99v-4.838l-3.848-3.087H4.11ZM6.476 8.216c1.74 0 3.151-1.403 3.151-3.134a3.143 3.143 0 0 0-3.15-3.135 3.143 3.143 0 0 0-3.151 3.135 3.143 3.143 0 0 0 3.15 3.134ZM13.333 9.526a2.85 2.85 0 0 0 2.857-2.842 2.85 2.85 0 0 0-2.857-2.842 2.85 2.85 0 0 0-2.857 2.842 2.85 2.85 0 0 0 2.857 2.842Z"
                      fill="white"
                    />
                    

                  </svg>
                  

                </span>
                 Kuma Enterprise Offerings 
                
                <!---->
              </a>
            </div>
          </div>
          
        </div>
        <div
          class="k-modal-footer modal-footer d-flex"
          data-v-442f114b=""
        >
          
          <button
            class="medium rounded outline k-button"
            data-testid="close-modal-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <!---->
            
            
             Close 
            
            <!---->
          </button>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationManager.vue renders single mesh notification modal 1`] = `
<div
  aria-label="Notifications"
  aria-modal="true"
  class="k-modal modal"
  data-testid="notification-modal"
  data-v-442f114b=""
  role="dialog"
>
  <div
    class="k-modal-backdrop modal-backdrop"
    data-v-442f114b=""
  >
    <div
      class="k-modal-dialog modal-dialog"
      data-v-442f114b=""
    >
      <!---->
      <div
        class="k-modal-content modal-content"
        data-v-442f114b=""
      >
        <!---->
        <div
          aria-level="2"
          class="header-left mb-5 k-modal-header modal-header"
          data-v-442f114b=""
          role="heading"
        >
          
          <div>
            <div>
              <span>
                 Some of these features are not enabled for 
                <span
                  class="text-xl tracking-wide"
                >
                  "test-mesh"
                </span>
                 mesh. Consider implementing them. 
              </span>
            </div>
            <button
              class="medium rounded outline k-button mt-4"
              data-v-6bcbf05d=""
              type="button"
            >
              
              <!---->
              
              
               ‹ Back to all 
              
              <!---->
            </button>
          </div>
          
        </div>
        <div
          class="content-left k-modal-body modal-body"
          data-v-442f114b=""
        >
          
          <ul
            class="accordion"
          >
            
            
            <li
              class="accordion-item relative border-b py-2"
            >
              <button
                aria-expanded="false"
                class="accordion-item-header"
              >
                <!-- This slot will display header -->
                
                <div
                  class="flex items-center"
                >
                  <span
                    class="mr-4 kong-icon-warning kong-icon"
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="20"
                      role="img"
                      version="1.1"
                      viewBox="0 0 48 42"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      
  
                      <title>
                        Warning
                      </title>
                      
  
                      <g
                        fill="var(--black-75)"
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        
    
                        <g
                          id="icn-warning-64x"
                        >
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                            fill="var(--black-75)"
                            fill-rule="nonzero"
                            id="Triangle"
                          />
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                            fill="var(--yellow-300)"
                            fill-rule="nonzero"
                            id="Path"
                            type="secondary"
                          />
                          
      
                          <path
                            d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                            fill="var(--black-75)"
                            id="!"
                          />
                          
    
                        </g>
                        
  
                      </g>
                      

                    </svg>
                    

                  </span>
                  <strong>
                    Observability, Metrics & Service Map
                  </strong>
                </div>
                
              </button>
              <transition-stub
                appear="false"
                css="true"
                name="accordion"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
            </li>
            <li
              class="accordion-item relative border-b py-2"
            >
              <button
                aria-expanded="false"
                class="accordion-item-header"
              >
                <!-- This slot will display header -->
                
                <div
                  class="flex items-center"
                >
                  <span
                    class="mr-4 kong-icon-warning kong-icon"
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="20"
                      role="img"
                      version="1.1"
                      viewBox="0 0 48 42"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      
  
                      <title>
                        Warning
                      </title>
                      
  
                      <g
                        fill="var(--black-75)"
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        
    
                        <g
                          id="icn-warning-64x"
                        >
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                            fill="var(--black-75)"
                            fill-rule="nonzero"
                            id="Triangle"
                          />
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                            fill="var(--yellow-300)"
                            fill-rule="nonzero"
                            id="Path"
                            type="secondary"
                          />
                          
      
                          <path
                            d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                            fill="var(--black-75)"
                            id="!"
                          />
                          
    
                        </g>
                        
  
                      </g>
                      

                    </svg>
                    

                  </span>
                  <strong>
                    Logging
                  </strong>
                </div>
                
              </button>
              <transition-stub
                appear="false"
                css="true"
                name="accordion"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
            </li>
            <li
              class="accordion-item relative border-b py-2"
            >
              <button
                aria-expanded="false"
                class="accordion-item-header"
              >
                <!-- This slot will display header -->
                
                <div
                  class="flex items-center"
                >
                  <span
                    class="mr-4 kong-icon-warning kong-icon"
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="20"
                      role="img"
                      version="1.1"
                      viewBox="0 0 48 42"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      
  
                      <title>
                        Warning
                      </title>
                      
  
                      <g
                        fill="var(--black-75)"
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        
    
                        <g
                          id="icn-warning-64x"
                        >
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                            fill="var(--black-75)"
                            fill-rule="nonzero"
                            id="Triangle"
                          />
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                            fill="var(--yellow-300)"
                            fill-rule="nonzero"
                            id="Path"
                            type="secondary"
                          />
                          
      
                          <path
                            d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                            fill="var(--black-75)"
                            id="!"
                          />
                          
    
                        </g>
                        
  
                      </g>
                      

                    </svg>
                    

                  </span>
                  <strong>
                    Zero-trust security
                  </strong>
                </div>
                
              </button>
              <transition-stub
                appear="false"
                css="true"
                name="accordion"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
            </li>
            <li
              class="accordion-item relative border-b py-2"
            >
              <button
                aria-expanded="false"
                class="accordion-item-header"
              >
                <!-- This slot will display header -->
                
                <div
                  class="flex items-center"
                >
                  <span
                    class="mr-4 kong-icon-warning kong-icon"
                    data-v-71cfcfc4=""
                  >
                    <svg
                      height="20"
                      role="img"
                      version="1.1"
                      viewBox="0 0 48 42"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                      xmlns:xlink="http://www.w3.org/1999/xlink"
                    >
                      
  
                      <title>
                        Warning
                      </title>
                      
  
                      <g
                        fill="var(--black-75)"
                        fill-rule="evenodd"
                        id="Page-1"
                        stroke="none"
                        stroke-width="1"
                      >
                        
    
                        <g
                          id="icn-warning-64x"
                        >
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z M26.8565586,1.63656862 L47.5511049,37.0538196 C48.4690879,38.6248825 47.9342141,40.6394832 46.3564308,41.5535561 C45.8517121,41.8459599 45.2782053,42 44.6942755,42 L3.30518292,42 C1.4797808,42 3.66949018e-16,40.5265221 0,38.7088951 C0,38.1274525 0.154699044,37.5563885 0.448353557,37.0538196 L21.1428999,1.63656862 C22.0608829,0.0655056975 24.0841012,-0.467089888 25.6618845,0.446983085 C26.1568841,0.733756171 26.5685588,1.14367738 26.8565586,1.63656862 Z"
                            fill="var(--black-75)"
                            fill-rule="nonzero"
                            id="Triangle"
                          />
                          
      
                          <path
                            d="M25.129733,2.64556484 C25.0166566,2.45204254 24.8546193,2.29069544 24.6593031,2.17754095 C24.0339615,1.81525556 23.2314423,2.02651215 22.8697255,2.64556484 L2.17517915,38.0628158 C2.06036961,38.2593042 2,38.4821557 2,38.7088951 C2,39.4200371 2.58244376,40 3.30518292,40 L44.6942755,40 C44.9262204,40 45.1538685,39.9388552 45.3538494,39.8229983 C45.9741835,39.4636139 46.1830669,38.6768553 45.8242793,38.0628158 L25.129733,2.64556484 Z"
                            fill="var(--yellow-300)"
                            fill-rule="nonzero"
                            id="Path"
                            type="secondary"
                          />
                          
      
                          <path
                            d="M23,13 L25,13 C25.5522847,13 26,13.4477153 26,14 C26,16 26,18 26,20 C26,22.6594889 25.7904331,25.0570193 25.3712994,27.192591 C25.2792336,27.6616739 24.8680521,28 24.3900199,28 L23.6099609,27.9999816 C23.1319364,27.9999816 22.7207615,27.6616608 22.6286994,27.1925851 C22.2095665,25.0570148 22,22.6594864 22,20 C22,18 22,16 22,14 C22,13.4477153 22.4477153,13 23,13 Z M24,31 C25.1045695,31 26,31.8954305 26,33 C26,34.1045695 25.1045695,35 24,35 C22.8954305,35 22,34.1045695 22,33 C22,31.8954305 22.8954305,31 24,31 Z"
                            fill="var(--black-75)"
                            id="!"
                          />
                          
    
                        </g>
                        
  
                      </g>
                      

                    </svg>
                    

                  </span>
                  <strong>
                    Tracing
                  </strong>
                </div>
                
              </button>
              <transition-stub
                appear="false"
                css="true"
                name="accordion"
                persisted="false"
              >
                <!--v-if-->
              </transition-stub>
            </li>
            
            
          </ul>
          
        </div>
        <div
          class="k-modal-footer modal-footer d-flex"
          data-v-442f114b=""
        >
          
          <button
            class="medium rounded outline k-button"
            data-testid="close-modal-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <!---->
            
            
             Close 
            
            <!---->
          </button>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NotificationManager.vue renders snapshot with information that there are actions which user may take 1`] = `
<div>
  <div
    class="info icon k-alert mb-4"
    data-testid="notification-info"
    data-v-1910ef98=""
    role="alert"
  >
    <!---->
    <!---->
    <div
      class="k-alert-msg-text has-dismiss-icon"
      data-v-1910ef98=""
    >
      <!---->
      <div
        class="k-alert-msg"
        data-v-1910ef98=""
      >
        
        <div
          class="mr-4"
        >
          <span
            class="mr-2"
          >
            <strong>
              ProTip:
            </strong>
             You might want to adjust your meshes configuration 
          </span>
          <button
            class="medium rounded outline k-button"
            data-testid="open-modal-button"
            data-v-6bcbf05d=""
            type="button"
          >
            
            <!---->
            
            
             Check your meshes! 
            
            <!---->
          </button>
        </div>
        
      </div>
      <!---->
    </div>
    <button
      aria-label="Close"
      class="close"
      data-v-1910ef98=""
      type="button"
    >
      <span
        class="info kong-icon-close kong-icon"
        data-v-1910ef98=""
        data-v-71cfcfc4=""
      >
        <svg
          fill="none"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          
  
          <title>
            Close
          </title>
          
  
          <path
            d="M16 4 3 17m13 0L3 4"
            stroke="#A3BBCC"
            stroke-linecap="round"
            stroke-width="2"
          />
          

        </svg>
        

      </span>
    </button>
    <div
      class="info k-alert-action"
      data-v-1910ef98=""
    >
      <!---->
      <!---->
    </div>
  </div>
  <!---->
</div>
`;
